@@ -37,7 +37,9 @@
             Stop atob adding trailing 0s when strings are not a multiple of 3 long
             Reconstruct start and end newlines when dumping multi-line functions  
             Fix regression parsing methods in classes on embedded (fix #1479)
-            Add options argument to NRF.connect and BluetoothDevice.gatt.connect, allowing a connection interval to be specified
+            nRF5x: Add options argument to NRF.connect and BluetoothDevice.gatt.connect, allowing a connection interval to be specified
+            nRF5x: Start renegotiating speed after 0.1ms, not 5s. Massively improves connect speed.
+            nRF5x: Now queue up to 6 UART TX packets per transmit interval (was 1 previously)
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
